# Dome

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  deny.toml
.github/workflows/: ci.yml  dispatch.yml  release-nightly.yml  release.yml
docs/: SUMMARY.md  architecture.md  book.toml  cli.md  commands.md  configuration.md  faq.md  getting-started.md  keybindings.md  layout.md  preferred-layout.md
docs/development/: architecture.md  conventions.md  releasing.md  testing.md  windows.md
examples/: config.toml  layout.toml
integrations/raycast/: README.md  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
integrations/raycast/src/: list-minimized-windows.tsx
resources/macos/: Info.plist
resources/macos/icon/: AppIcon.icns
resources/windows/: dome.manifest  dome.rc  main.wxs
scripts/: coverage.sh  e2e.sh
src/: action.rs  cli.rs  config.rs  dome.rs  font.rs  ipc.rs  keymap.rs  lib.rs  logging.rs  main.rs  objc2_wrapper.rs  overlay.rs  picker.rs  theme.rs  window.rs  window_manager.rs  workspace.rs
src/core/: allocator.rs  command.rs  dto.rs  export.rs  float.rs  fullscreen.rs  hub.rs  minimize.rs  mod.rs  node.rs  split.rs  strategy.rs  test.rs  workspace.rs
src/core/master/: export.rs  mod.rs  placement.rs  preferred_layout.rs  scroll.rs  validate.rs
src/core/master_stack/: mod.rs
src/core/partition_tree/: container.rs  layout.rs  mod.rs  navigate.rs  placement.rs  preferred_layout.rs  scroll.rs  tree.rs  types.rs  validate.rs
src/core/tests/: auto_tile.rs  border.rs  delete_window.rs  float_window.rs  focus_direction.rs  focus_parent.rs  focus_workspace.rs  fullscreen.rs  insert_window.rs  master.rs  master_stack.rs  min_size.rs  minimize.rs  mod.rs  monitor.rs  move_in_direction.rs  move_to_workspace.rs  preferred_layout.rs  query.rs  set_focus.rs  set_window_constraint.rs  smoke.rs  strategy_switch.rs  sync_config.rs  tabbed.rs  toggle_direction.rs  toggle_new_window_direction.rs  toggle_spawn_direction.rs  toggle_spawn_mode.rs  visible_placements.rs  window_at.rs
src/core/tests/master/: export.rs  layout.rs  mod.rs  moving.rs  preferred_layout.rs  scroll.rs  sync_config.rs
src/core/tests/partition_tree/: auto_tile.rs  automatic_tiling.rs  delete_window.rs  export.rs  float_window.rs  focus_direction.rs  focus_parent.rs  gaps.rs  guard_clauses.rs  insert_window.rs  mod.rs  monitor.rs  move_in_direction.rs  move_to_workspace.rs  preferred_layout.rs  scroll.rs  set_window_constraint.rs  sync_config.rs  tabbed.rs  toggle_direction.rs  toggle_spawn_mode.rs
src/platform/linux/: focus.rs  handlers.rs  input.rs  mod.rs  render.rs  state.rs  udev_backend.rs  winit_backend.rs
src/platform/macos/: accessibility.rs  app.rs  config.rs  config_watcher.rs  context.rs  dispatcher.rs  dome.rs  event_loop.rs  font.rs  handler.rs  hub.rs  ipc.rs  keyboard.rs  listeners.rs  login_item.rs  mirror.rs  mod.rs  monitor.rs  objc2_wrapper.rs  overlay.rs  recovery.rs  registry.rs  renderer.rs  rendering.rs  running_application.rs  spawn.rs  throttle.rs  window.rs
src/platform/macos/dome/: dispatcher.rs  dome.rs  events.rs  inspect.rs  layout.rs  mirror.rs  mod.rs  monitor.rs  placement_tracker.rs  recovery.rs  registry.rs  rejection_log_filter.rs  runloop.rs  window.rs
src/platform/macos/tests/: add_window.rs  lifecycle.rs  mod.rs  placement.rs  transitions.rs  uncooperative.rs  window_state.rs
src/platform/macos/ui/: icon.rs  mirror.rs  mod.rs  overlay.rs  picker.rs  renderer.rs  status_menu.rs
src/platform/windows/: app.rs  config_watcher.rs  display.rs  dome.rs  dpi.rs  event_listener.rs  external.rs  font.rs  handle.rs  hub.rs  ipc.rs  keyboard.rs  login_item.rs  mod.rs  monitor.rs  overlay.rs  process.rs  recovery.rs  runner.rs  spawn.rs  taskbar.rs  throttle.rs  timer_registry.rs  window.rs  windows_wrapper.rs
src/platform/windows/dome/: app_window.rs  icon.rs  inspect.rs  mod.rs  monitor.rs  overlay.rs  picker.rs  placement_tracker.rs  recovery.rs  registry.rs  rejection_log_filter.rs  throttle.rs  tray.rs  window.rs
src/platform/windows/tests/: config_live_reload.rs  drift.rs  lifecycle.rs  mod.rs  picker.rs  placement.rs  render.rs  transitions.rs  uncooperative.rs  zorder.rs
src/platform/windows/window/: handle.rs  mod.rs  overlay.rs
src/platform/windows/wm/: mod.rs  overlay.rs  recovery.rs  window.rs
tests/: e2e.rs
