[package]
name = "dome"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
backtrace = "0.3.76"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
bitflags = "2.10.0"
csscolorparser = { version = "0.8.1", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
serde_json = "1.0.148"
regex = "1.12.2"
interprocess = "2.2.3"
notify = "8.2.0"
egui = "0.31"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
dispatch2 = "0.3"
libc = "0.2.179"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-application-services = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-core-media = "0.3.2"
objc2-core-video = { version = "0.3.2", features = ["CVPixelBufferIOSurface", "CVBuffer", "CVImageBuffer", "CVPixelBuffer", "objc2-io-surface"] }
objc2-foundation = "0.3.2"
objc2-io-surface = { version = "0.3.2", features = ["IOSurfaceRef"] }
objc2-quartz-core = { version = "0.3.2", features = ["CAMetalLayer"] }
objc2-metal = { version = "0.3.2", features = ["MTLDevice", "MTLCommandQueue", "MTLRenderPipeline", "MTLTexture", "MTLBuffer", "MTLRenderCommandEncoder", "MTLCommandBuffer", "MTLRenderPass", "MTLLibrary", "MTLSampler", "MTLAllocation", "MTLResource", "objc2-io-surface"] }
objc2-screen-capture-kit = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
calloop = "0.14"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_UI_Accessibility", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_UI_Controls", "Win32_UI_Shell", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_System_Pipes", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_IO", "Win32_UI_HiDpi", "Win32_System_Console"] }
egui_glow = "0.31"
glow = "0.16"
glutin = "0.32"
raw-window-handle = "0.6"

[dev-dependencies]
insta = "1.44.3"
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.10"
