[package]
name = "dome"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.103"
backtrace = "0.3.76"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
toml = "0.9.8"
toml_edit = { version = "0.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bitflags = "2.10.0"
clap = { version = "4.5.53", features = ["derive"] }
serde_json = "1.0.148"
regex = "1.12.2"
interprocess = "2.2.3"
notify = "8.2.0"
egui = "0.34"
egui-wgpu = "0.34"
wgpu = { version = "29", features = ["dx12"] }
pollster = "0.4"
calloop = { version = "0.14", features = ["executor"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
dispatch2 = "0.3"
futures-channel = "0.3"
libc = "0.2.179"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "block2", "libc", "NSApplication", "NSWorkspace", "NSRunningApplication", "NSWindow", "NSWindowScripting", "NSView", "NSColor", "NSEvent", "NSScreen", "NSResponder", "NSGraphics", "NSImage", "NSImageRep", "NSBitmapImageRep", "NSStatusBar", "NSStatusItem", "NSStatusBarButton", "NSMenu", "NSMenuItem", "NSButton", "NSControl", "NSCell", "objc2-core-foundation", "objc2-core-graphics", "objc2-quartz-core"] }
objc2-application-services = { version = "0.3.2", default-features = false, features = ["std", "objc2", "libc", "HIServices", "AXUIElement", "AXValue", "AXError", "Accessibility", "AXNotificationConstants"] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = ["std", "CFArray", "CFDictionary", "CFNumber", "CFString", "CFRunLoop", "CFMachPort", "CFCGTypes", "CFDate", "CFURL"] }
objc2-core-graphics = { version = "0.3.2", default-features = false, features = ["std", "CGWindow", "CGColorSpace", "CGError", "CGGeometry", "CGSession", "CGDirectDisplay", "CGEvent", "CGEventTypes"] }
objc2-core-media = { version = "0.3.2", default-features = false, features = ["std", "CMSampleBuffer", "objc2-core-video"] }
objc2-core-video = { version = "0.3.2", features = ["CVPixelBufferIOSurface", "CVBuffer", "CVImageBuffer", "CVPixelBuffer", "objc2-io-surface"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "block2", "NSObject", "NSString", "NSValue", "NSNotification", "NSDistributedNotificationCenter", "NSOperation", "NSGeometry", "NSError", "NSObjCRuntime", "NSArray", "NSDictionary", "NSData"] }
objc2-io-surface = { version = "0.3.2", features = ["IOSurfaceRef"] }
objc2-quartz-core = { version = "0.3.2", features = ["CALayer", "CAMetalLayer", "CATransaction"] }
objc2-screen-capture-kit = { version = "0.3.2", default-features = false, features = ["std", "block2", "dispatch2", "SCShareableContent", "SCStream", "objc2-core-foundation", "objc2-core-graphics", "objc2-core-media"] }
objc2-core-text = { version = "0.3.2", default-features = false, features = ["std", "CTFontDescriptor"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_UI_Accessibility", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_UI_Controls", "Win32_UI_Shell", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_Storage_EnhancedStorage", "Win32_System_LibraryLoader", "Win32_System_Pipes", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_IO", "Win32_UI_HiDpi", "Win32_System_Console", "Win32_Graphics_DirectComposition"] }
rayon = "1.10"

[build-dependencies]
embed-resource = "3"

[dev-dependencies]
insta = "1.44.3"
rand = "0.9.3"
rand_chacha = "0.9.0"
rayon = "1.10"

[profile.release]
debug = "line-tables-only"
